sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:11: error: not found: value n
    if (n=0) {test=false}
        ^AlgBubbleSort1:12: error: not found: value i
    else {i=0}
          ^